--- a/styles/default.css
+++ b/styles/default.css
@@ -17,7 +17,7 @@ header
 
 main
 {
-  text-align: center;
+  text-align: left;
 }
 
 footer
@@ -25,15 +25,7 @@ footer
   text-align: center;
 }
 
-#main_left
+#main_center
 {
-  text-align: left;
-}
-
-
-
-.intro_wedding_pic
-{
-  width: 189px;
-  height: 252px;
+  text-align: center;
 }
